0.1.0
==============

Converting function to stand-alone package


0.2.0
==============
 - Created all new functions using htmlTools. All old function names are depreciated
 - Seperated simple box from one that responds to threshold to clarify better hat imputs are required to each
 - TileMaker now doesn't need a filename
 - Added tile_matrix function to make multiple buttons suitable to quickly take inputs from a dataframe
 - CRAN-ready version