@@ -10,4 +10,4 @@ LazyData: TRUE
 RoxygenNote: 6.0.1.9000
 BugReports: https://github.com/mexindian/TileMaker/issues
 URL: https://github.com/mexindian/TileMaker
-Imports: htmltools
+Imports: htmltools, purrr
