@@ -6,10 +6,13 @@ export(TileMaker)
 export(div_maker)
 export(file_maker)
 export(ico)
+export(multi_box)
 export(solo_box)
 export(solo_gradient_box)
 export(tags)
 export(tile_matrix)
+importFrom(htmltools,HTML)
 importFrom(htmltools,browsable)
 importFrom(htmltools,save_html)
 importFrom(htmltools,tags)
+importFrom(purrr,pmap)
