@@ -5,8 +5,7 @@
 \title{solo_box}
 \usage{
 solo_box(value = NULL, subtitle = NULL, former = NULL, size = "md",
-  icon = NULL, type = "warning", link = NULL, units = NULL,
-  hover = NULL)
+  icon = NULL, type = "info", link = NULL, units = NULL, hover = NULL)
 }
 \arguments{
 \item{value}{The numeric value you want to highlight (the main enchilada)}
@@ -15,7 +14,7 @@ solo_box(value = NULL, subtitle = NULL, former = NULL, size = "md",
 
 \item{former}{The numeric old value to use for comparison to 'value'}
 
-\item{size}{Optional numeric 1-4, corresponding to the sizes specified in the bootstrap css classes:
+\item{size}{Optional size specified in the bootstrap css classes:
 \"xs\",\"sm\",\"md\",\"lg\")}
 
 \item{icon}{Optional glyphicon that should be displayed from http://getbootstrap.com/components/}
